# wofa_runner

./: .gitignore  README.md  app_info.py  build.bat  build.py  build_installer.py  build_mobile.py  installer.py  publish_github.bat  pyproject.toml  pyproject.toml.github
src/: app.py  favicon.icns  languages.xlsx  main.py  ui.py  wfa_manager.py
wofa/: server_keeper.wfa  wofa_claw.wfa
